refactor: lotto constructor